--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Deployment</title>
+    <title>Deployment Status</title>
 </head>
 <body>
-    <h1>Test GitHub Pages Deployment</h1>
-    <p>This is a simple test to deploy a static site using the 'Deploy GitHub Pages Site' action from GitHub Marketplace.</p>
+    <h1>Deploy tag {{ TAG }} to {{ ENVIRONMENT }} environment</h1>
 </body>
 </html>
+
