--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deployment Status</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Deployment Status</title>
 </head>
 <body>
-    <h1>Deploy tag {{ TAG }} to {{ ENVIRONMENT }} environment</h1>
+   <h1>Deployed tag ${{ github.event.inputs.tag }} to ${{ github.event.inputs.environment }} environment</h1>
 </body>
 </html>
-
