--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     const runId = "replace-with-current-run-id"; // You'll need to get this from the workflow
 
     async function fetchWorkflowRun() {
-      const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/actions/runs/${runId}`, {
+      const response = await fetch(`https://api.github.com/repos/pacific-devops/Hello_master/actions/runs/${runId}`, {
         headers: {
           Authorization: `Bearer ${GITHUB_TOKEN}`,  // You'll set this in the environment or provide access token dynamically
           Accept: "application/vnd.github.v3+json",
