--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deployment Status</title>
-  <script src="github-token.js"></script> <!-- Securely load the GITHUB_TOKEN -->
 </head>
 <body>
   <h1>Deployed tag <span id="tag"></span> to <span id="environment"></span> environment</h1>
@@ -18,28 +17,21 @@
   <p><a id="artifactLink" href="#">Download Artifact</a></p>
 
   <script>
-    const owner = "your-github-username";  // Replace with your GitHub username
-    const repo = "your-repo-name";         // Replace with your repository name
+    const owner = "pacific-devops";  // Replace with your GitHub organization name
+    const repo = "Hello_master";     // Replace with your repository name
 
     // Fetch the most recent workflow run
     async function fetchLatestWorkflowRun() {
-      const response = await fetch(`https://api.github.com/repos/pacific-devops/Hello_master/actions/runs`, {
-        headers: {
-          Authorization: `Bearer ${window.GITHUB_TOKEN}`,
-          Accept: "application/vnd.github.v3+json",
-        }
-      });
+      const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/actions/runs?per_page=1`);
+      if (!response.ok) {
+        throw new Error(`HTTP error! Status: ${response.status}`);
+      }
       const data = await response.json();
       return data.workflow_runs[0]; // Get the latest run
     }
 
     async function fetchCommit(commitSha) {
-      const response = await fetch(`https://api.github.com/repos/pacific-devops/Hello_master/commits/${commitSha}`, {
-        headers: {
-          Authorization: `Bearer ${window.GITHUB_TOKEN}`,
-          Accept: "application/vnd.github.v3+json",
-        }
-      });
+      const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/commits/${commitSha}`);
       return response.json();
     }
 
