--- a/index.html
+++ b/index.html
@@ -14,51 +14,26 @@
   <p>Commit Author: <span id="commitAuthor"></span></p>
   <p>Commit Date: <span id="commitDate"></span></p>
   <p>Deployment Time: <span id="deployTime"></span></p>
-  <p><a id="artifactLink" href="#">Download Artifact</a></p>
 
   <script>
-    const owner = "pacific-devops";  // Replace with your GitHub organization name
-    const repo = "Hello_master";     // Replace with your repository name
-
-    // Fetch the most recent workflow run
-    async function fetchLatestWorkflowRun() {
-      const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/actions/runs?per_page=1`);
-      if (!response.ok) {
-        throw new Error(`HTTP error! Status: ${response.status}`);
-      }
+    // Fetch workflow details from the Node.js server
+    async function fetchWorkflowDetails() {
+      const response = await fetch('/workflow');
       const data = await response.json();
-      return data.workflow_runs[0]; // Get the latest run
+
+      // Inject data into HTML
+      document.getElementById("tag").innerText = data.commit_message;
+      document.getElementById("environment").innerText = data.run_number;
+      document.getElementById("buildNumber").innerText = data.run_number;
+      document.getElementById("buildStatus").innerText = data.conclusion;
+      document.getElementById("commitSha").innerText = data.commit_sha;
+      document.getElementById("commitMessage").innerText = data.commit_message;
+      document.getElementById("commitAuthor").innerText = data.commit_author;
+      document.getElementById("commitDate").innerText = new Date(data.commit_date).toLocaleString();
+      document.getElementById("deployTime").innerText = new Date(data.deploy_time).toLocaleString();
     }
 
-    async function fetchCommit(commitSha) {
-      const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/commits/${commitSha}`);
-      return response.json();
-    }
-
-    async function populatePage() {
-      try {
-        // Fetch the latest workflow run
-        const workflowRun = await fetchLatestWorkflowRun();
-        const commitSha = workflowRun.head_sha;
-        const commitDetails = await fetchCommit(commitSha);
-
-        // Inject data into HTML
-        document.getElementById("tag").innerText = workflowRun.head_commit.message;
-        document.getElementById("environment").innerText = workflowRun.run_attempt;  // Adjust as needed
-        document.getElementById("buildNumber").innerText = workflowRun.run_number;
-        document.getElementById("buildStatus").innerText = workflowRun.conclusion;
-        document.getElementById("commitSha").innerText = commitSha;
-        document.getElementById("commitMessage").innerText = commitDetails.commit.message;
-        document.getElementById("commitAuthor").innerText = commitDetails.commit.author.name;
-        document.getElementById("commitDate").innerText = new Date(commitDetails.commit.author.date).toLocaleString();
-        document.getElementById("deployTime").innerText = new Date(workflowRun.created_at).toLocaleString();
-        document.getElementById("artifactLink").setAttribute("href", "https://jfrog-link-to-artifact");
-      } catch (error) {
-        console.error("Error fetching workflow details:", error);
-      }
-    }
-
-    window.onload = populatePage;
+    window.onload = fetchWorkflowDetails;
   </script>
 </body>
 </html>
